fix: comprehensive bug fixes across BifroMQ codebase
HIGH severity:
- H1: QUICStreamRouter thread safety - use AtomicReferenceArray for dataStreams
- H2: QUICStreamRouter cleanup on connection close - add clear() method
- H3: TenantRouteCache race condition - add comment noting thread safety
- H4: TenantGauge memory leak - replace WeakHashMap with synchronized Map
- H5: BaseKVStoreService recover/zombieQuit - remove overwriting .handle()
- H6: RocksDBHelper silent IOException - log failures and throw aggregate
- H7: KVRangeWAL subscription leak - use whenComplete instead of exceptionally
- H8: Helm imagePullSecrets path - move to top-level in values.yaml
- H9: Helm WSS listener config - add wssEnabled/wssPort/wssPath support
- H10: ServiceMonitor hardcoded namespace - use Release.Namespace/Name

MEDIUM severity:
- M1: MQTTConnectHandler unconditional cast - add instanceof check
- M2: exceptionCaught ordering - handle before super.exceptionCaught
- M3: QUICStreamInitializer - close unidirectional streams
- M5: InboxStoreCoProc null return - throw on missing metadata
- M6: SharedResourcesHolder assert target - fix wrong variable name
- M7: RocksDBKVSpaceCompactionTrigger - remove tombstone count from recordPut
- M8: CacheableSettingProvider stale cache - use initialValue instead of oldValue
- M9: Prometheus HTTP server lifecycle - register stop in closeables
- M10: Debug logs at ERROR level - downgrade to debug/warn
- M11: Health probes - add /health endpoint and fix probe path
- M12: CachingKVRangeReader silent exception - add WARN logging
- M13: BifroMQPlugin setAccessible - catch InaccessibleObjectException
- M14: KVRangeFSM writer abort on parse failure